--- a/Love/css/styles.css
+++ b/Love/css/styles.css
@@ -149,3 +149,18 @@ canvas {
     overflow: hidden;
     background-repeat: no-repeat;
 }
+
+
+.love_text {
+    width: 250px; /* 输入框宽度 */
+    padding: 8px;
+    font-size: 14px;
+}
+
+.love_btn {
+    width: 100px; /* 按钮宽度 */
+    padding: 8px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
